AN - added logic to display questions

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
     <h1 id ="test">Jeopardy game</h1>
-    <div id="question">Temp</div>
-    <button id="newQ">Click me for a new question</button>
-    <button id="answer">Answer</button>
+    <div class="question-box">
+        <div id="question1" class="question">100</div>
+        <div id="answer1"></div>
+        <div id="question2" class="question">200</div>
+        <div id="answer2"></div>
+        <div id="question3" class="question">400</div>
+        <div id="answer3"></div>
+        <div id="question4" class="question">800</div>
+        <div id="answer4"></div>
+        <div id="question5" class="question">1000</div>
+        <div id="answer5"></div>
+    </div>
+    <button id="answer" class="answer">Answer</button>
+    <br>
+    <button id="newQ" class="newQ">Click me for new questions</button>
     
 </body>
 
