--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,22 @@
     <h1 id ="test">Jeopardy game</h1>
     <div class="question-box">
         <div id="question1" class="question">100</div>
-        <div id="answer1"></div>
+        <div id="answer1" class="answerTextShow"></div>
         <div id="question2" class="question">200</div>
-        <div id="answer2"></div>
+        <div id="answer2" class="answerTextShow"></div>
         <div id="question3" class="question">400</div>
-        <div id="answer3"></div>
+        <div id="answer3" class="answerTextShow"></div>
         <div id="question4" class="question">800</div>
-        <div id="answer4"></div>
+        <div id="answer4" class="answerTextShow"></div>
         <div id="question5" class="question">1000</div>
-        <div id="answer5"></div>
+        <div id="answer5" class="answerTextShow"></div>
     </div>
     <button id="answer" class="answer">Answer</button>
+    <div>
+        <input type="text" name="answerText" id="ansText" class="answerText">
+        <input type="button" value="Submit" id="answerSubmit" class="answerSubmit">
+        <div id="answerNotPressed" class="answerNP"></div>
+    </div>
     <br>
     <button id="newQ" class="newQ">Click me for new questions</button>
     
