--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <div class="container">
+    <h1>I love you =)</h1>
+    <!-- <div class="container">
         <h1 id="test">Jeopardy game</h1>
         <div class="question-board">
             <div class="question-box">
@@ -59,12 +60,12 @@
         </div>
         <br>
         <button id="newQ" class="newQ">Click me for new questions</button>
-    </div>
+    </div> -->
 
 </body>
 
 
-<script src="/socket.io/socket.io.js"></script>
-<script src="js/main.js"></script>
+<!-- <script src="/socket.io/socket.io.js"></script>
+<script src="js/main.js"></script> -->
 
 </html>
